tests/negative/test_explicit_cast_impl_from.orb
explicit t i32;

fnc main () () {
    sym a:t;
    sym (b:i32 a);
};